--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <p>
-                        I'm a full-stack developer currently attending the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
-                        Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.
+                        I'm a full-stack developer who's graduated from the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                        I spend my time reverse engineering and reimplementating different services and APIs, as well as the developing smaller niche applications.
                         <br><br>
                         While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
                     </p>
@@ -97,12 +97,12 @@
                             <h2>E-Mail</h2>
                         </a>
                     </li>
-                    <!--<li>
-                        <a href="https://twitter.com/JemTanuki">
-                            <img src="/images/iOS/twitter.png" alt="twitter icon">
-                            <h2>Twitter</h2>
+                    <li>
+                        <a href="https://bsky.app/profile/jemsoftware.dev">
+                            <img src="https://blueskyweb.xyz/images/logo-64x64.jpg" alt="bluesky icon">
+                            <h2>Bluesky</h2>
                         </a>
-                    </li>-->
+                    </li>
                     <li class="shine">
                         <a href="https://chitter.xyz/@Jemma">
                             <img src="/images/iOS/mastodon.png" alt="mastodon icon">
@@ -123,7 +123,7 @@
                     </li>-->
                     <li class="shine">
                         <img src="/images/iOS/discord.png" alt="Discord icon">
-                        <h2>Jemma#6508</h2>
+                        <h2>jemtanuki (formerly Jemma#6508)</h2>
                     </li>
                 </ul>
                 <h1 class="settings-header">Want to help support my work?</h1>
