--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <h2>E-Mail</h2>
                         </a>
                     </li>
-                    <li>
+                    <li class="shine">
                         <a href="https://bsky.app/profile/jemsoftware.dev">
                             <img src="https://blueskyweb.xyz/images/logo-64x64.jpg" alt="bluesky icon">
                             <h2>Bluesky</h2>
@@ -123,7 +123,7 @@
                     </li>-->
                     <li class="shine">
                         <img src="/images/iOS/discord.png" alt="Discord icon">
-                        <h2>jemtanuki (formerly Jemma#6508)</h2>
+                        <h2>jemtanuki</h2>
                     </li>
                 </ul>
                 <h1 class="settings-header">Want to help support my work?</h1>
