--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Jemma Poffinbarger">
-    <meta property="og:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta property="og:description" content="I'm a Embedded Systems Engineer who graduated from the University of Wisconsin: Platteville. Outside my professional work, I spend my time reverse engineering and reimplementating different web services and APIs. While most of my work is with embedded systems and web applications, I have experience developing for iOS, macOS, Linux, and more.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jemsoftware.dev">
     <meta property="og:site_name" content="Jemma Poffinbarger">
     <meta name="twitter:url" content="https://jemsoftware.dev/">
     <meta name="twitter:site" content="@jemtanuki">
     <meta name="twitter:title" content="Jemma Poffinbarger">
-    <meta name="twitter:description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
-    <meta name="description" content="Howdy! My name is Jemma! I'm a full-stack developer currently attending the University of Wisconsin: Platteville. Most of my work consists of the reverse engineering and reimplementation of different services and APIs, as well as the development of smaller niche applications.">
+    <meta name="twitter:description" content="I'm a Embedded Systems Engineer who graduated from the University of Wisconsin: Platteville. Outside my professional work, I spend my time reverse engineering and reimplementating different web services and APIs. While most of my work is with embedded systems and web applications, I have experience developing for iOS, macOS, Linux, and more.">
+    <meta name="description" content="I'm a Embedded Systems Engineer who graduated from the University of Wisconsin: Platteville. Outside my professional work, I spend my time reverse engineering and reimplementating different web services and APIs. While most of my work is with embedded systems and web applications, I have experience developing for iOS, macOS, Linux, and more.">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/png" sizes="32x32" href="images/pfp32.jpg">
     <link rel="stylesheet" href="css/redux.css">
@@ -64,10 +64,10 @@
                         </div>
                     </div>
                     <p>
-                        I'm a full-stack developer who's graduated from the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
-                        I spend my time reverse engineering and reimplementating different services and APIs, as well as the developing smaller niche applications.
+                        I'm a Embedded Systems Engineer who graduated from the <b><a href="https://uwplatt.edu/"> University of Wisconsin: Platteville.</a></b>
+                        Outside my professional work, I spend my time reverse engineering and reimplementating different web services and APIs.
                         <br><br>
-                        While most of my work is with web applications, I have experience developing for iOS, Android, Windows, and more.
+                        While most of my work is with embedded systems and web applications, I have experience developing for iOS, macOS, Linux, and more.
                     </p>
                     <button onclick="switchScreen()">View my Projects</button>
                 </div>
@@ -149,7 +149,7 @@
                         <img src="images/pretendo.png" alt="">
                         <div class="info">
                             <h2>Pretendo Network</h2>
-                            <h4>HTML / CSS / NodeJS / MongoDB</h4>
+                            <h4>HTML / CSS / NodeJS / MongoDB / C++ / C</h4>
                             <h4>2018 - Present</h4>
                         </div>
                     </div>
@@ -170,9 +170,9 @@
                         </div>
                     </div>
                     <p>
-                        Progressive Web App for a scout camp with an interactive map, information about activities, and more
+                        Progressive Web App for the Crystal Lake Scout Reservation with an interactive map, information about activities, and more
                     </p>
-                    <a href="https://Tesomas.Camp">
+                    <a href="https://github.com/CaramelKat/tesomas-dot-camp">
                         <button>Learn More</button>
                     </a>
                 </div>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <p>
-                        A native app for browsing a furry image board site on iOS, iPadOS, and macOS
+                        An image board viewer for iOS, iPadOS, and macOS
                     </p>
                     <a href="https://www.github.com/caramelkat/tanukis-stash">
                         <button>Learn More</button>
