chore: update juxt cdn domain

--- a/juxt-downloader.html
+++ b/juxt-downloader.html
@@ -20,7 +20,7 @@
     <p id="text"></p>
 </div>
 <script>
-    const cdn = 'https://pretendo-cdn.b-cdn.net', bar = document.getElementById('bar'), text = document.getElementById('text');
+    const cdn = 'https://r2-cdn.pretendo.cc', bar = document.getElementById('bar'), text = document.getElementById('text');
     let user;
     (async function(){
 
