--- a/invoke.html
+++ b/invoke.html
@@ -42,7 +42,7 @@
 		.matrix-border {
 			border: #393939 solid 30px;
 			width: 300px;
-			height: 300px;
+			height: fit-content;
 			overflow: clip;
 			border-radius: 50%;
 			margin-bottom: 1em;
@@ -50,6 +50,7 @@
 			justify-content: center;
 			align-items: anchor-center;
 			filter: blur(4px);
+			aspect-ratio: 1 / 1;
 		}
 
 		.matrix {
