--- a/invoke.html
+++ b/invoke.html
@@ -193,6 +193,7 @@
 			<a id="frame-forward" offset="1">➡️</a>
 			<a id="del-frame">🗑️</a>
 			<a id="add-frame">➕</a>
+			<a id="copy">📋</a>
 			<a id="download">💾</a>
 		</div>
 		<div id="frames">
@@ -217,6 +218,7 @@
 	const addFrameBtn = document.getElementById('add-frame');
 	const delFrameBtn = document.getElementById('del-frame');
 	const downloadBtn = document.getElementById('download');
+	const copyBtn = document.getElementById('copy');
 
 	function downloadURL(data, fileName) {
 		const a = document.createElement('a')
@@ -253,6 +255,7 @@
 	addFrameBtn.addEventListener("click", addFrame);
 	delFrameBtn.addEventListener("click", delFrame);
 	downloadBtn.addEventListener("click", download);
+	copyBtn.addEventListener("click", copyFrame);
 
 	document.addEventListener('keydown', (event) => {
 		if (event.target == fileNameInput)
@@ -321,9 +324,37 @@
 
 	function addFrame() {
 		let oldIndex = currentIndex;
-		frames.splice(oldIndex + 1, 0, new Array(NUM_LEDS).fill([0, 0, 0]));
+		frames.splice(oldIndex + 1, 0, [
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0],
+			[0, 0, 0]
+		]);
 		initFrames();
 		setFrame(oldIndex + 1);
+	}
+
+	function copyFrame() {
+		addFrame();
+		let frameToCopy = frames[currentIndex - 1];
+		for(let index in frames[currentIndex]) {
+			let led = frameToCopy[index];
+			index = Number(index);
+			setLed(index + 1, {
+				r: led[0],
+				g: led[1],
+				b: led[2],
+			})
+		}
 	}
 
 	function delFrame() {
